--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -16,3 +16,146 @@
 @import url('./badges.css');
 @import url('./back-link.css');
 @import url('./footer.css');
+.container {
+  display: flex;
+  justify-content: center; /* центр по горизонтали */
+  align-items: center; /* центр по вертикали */
+  height: 100px; /* высота контейнера на всю высоту экрана */
+}
+
+/* Стили для инпута */
+input {
+  width: 200px;
+  padding: 10px;
+}
+.loader {
+  display: inline-block;
+  font-size: 48px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  color: #FFF;
+  position: fixed;
+  top: 80%;
+  left: 57%;
+  transform: translate(-50%, -50%);
+  
+}
+.loader::before {
+  content: '';  
+  position: absolute;
+  left: 34px;
+  bottom: 8px;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  border: 5px solid #FFF;
+  border-bottom-color: #FF3D00;
+  box-sizing: border-box;
+  animation: rotation 0.6s linear infinite;
+}
+
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+} 
+* {
+  box-sizing: border-box;
+}
+body {
+  width: 1440px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  background-color: #fafafa;
+  color: #212121;
+  line-height: 1.5;
+}
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between; 
+  gap: 24px;
+  list-style: none;
+  padding: 24px;
+  margin: 0;
+}
+
+.gallery .gallery-item {
+  flex-basis: calc(20% - 48px); 
+  box-sizing: border-box; 
+}
+
+.gallery img {
+  width: 100%; 
+  height: 200px; 
+  max-width: 100%; 
+  object-fit: cover; 
+}
+label {
+  display: block;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+  text-align: left;
+
+}
+form {
+  width: 408px;
+  height: auto;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  padding: 24px;
+}
+input, textarea {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #808080;
+  border-radius: 4px;
+  resize: none;
+  box-sizing: border-box;
+  align-items: center;
+}
+input:hover {
+  border-color: black;
+}
+textarea {
+  height: auto;
+  max-height: 85px;
+}
+button {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  width: 95px;
+  height: 40px;
+  padding: 8px 16px;
+  background-color: #4e75ff;
+  color: #fff;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+  float: none;
+}
+button:hover {
+  background-color: #6c8cff;
+}
+.hidden {
+  display: none;
+}
+
+.load-more {
+  margin: 0 auto;
+  width: 125px;
+}
